# spotiapi

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  spotiapi.py  tests.py  wrapper.py
examples/: current_player.py  get_artist_albums.py  get_artist_top_songs.py  get_player.py  get_user.py
spotiapi/: __init__.py  __init__.py.backup  spotiapi.py  wrapper.py
