[tool.poetry]
name = "spotiapi"
version = "1.1"
description = "A small Spotify API that can help you get the data of the user who issued the token."
authors = ["Julheer <admin0x12@julheer.ru>"]
license = "MIT"
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://github.com/julheer/spotiapi"
project_urls =
    "Bug Tracker" = "https://github.com/julheer/spotiapi/issues"
    "Ideas & other" = "https://github.com/julheer/spotiapi/pulls"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
