[tool.poetry]
name = "spotiapi"
version = "1.1.2"
description = "A small Spotify API that can help you get the data of the user who issued the token."
authors = ["Julheer <admin0x12@julheer.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
